# Optimizer-Comparison-CNN

./: .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  main.py  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  utils.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml
configs/: default.yaml
docs/: index.md
src/optimizer_comparison/: __init__.py  cli.py  data.py  models.py  optimizers.py  plotting.py  train.py
tests/: conftest.py  test_cli.py  test_determinism.py  test_get_dataloaders.py  test_optimizer_factory.py  test_plot_results.py  test_plotting.py  test_simplecnn.py  test_training.py  test_utils.py
